force-app/main/default/objects/WA_Message__c/WA_Message__c.object-meta.xml
<CustomObject>
    <label>WA Message</label>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>WA Message Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WA Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>