force-app/main/default/objects/WA_Message__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WA Messages</relationshipLabel>
    <relationshipName>WA_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>