force-app/main/default/objects/WA_Message__c/fields/Image_URL_new__c.field-meta.xml
<CustomField>
    <fullName>Image_URL_new__c</fullName>
    <label>Image URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>