force-app/main/default/objects/WA_Message__c/fields/Is_Context__c.field-meta.xml
<CustomField>
    <fullName>Is_Context__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Context?</label>
    <type>Checkbox</type>
</CustomField>