force-app/main/default/objects/WA_Message__c/fields/Media_Id__c.field-meta.xml
<CustomField>
    <fullName>Media_Id__c</fullName>
    <label>Media Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>