force-app/main/default/objects/WA_Message__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Media Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>