force-app/main/default/objects/WA_Message__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <label>Message Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>