force-app/main/default/objects/WA_Message__c/fields/Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_Time__c</fullName>
    <label>Sent Time</label>
    <type>DateTime</type>
</CustomField>