force-app/main/default/objects/WA_Message__c/fields/WA_Id__c.field-meta.xml
<CustomField>
    <fullName>WA_Id__c</fullName>
    <label>WA Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>