force-app/main/default/objects/WA_Message__c/listViews/Today_messages.listView-meta.xml
<ListView>
    <fullName>Today_messages</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Today messages</label>
</ListView>