force-app/main/default/objects/WA_Message__c/listViews/Whatsapp_Messages.listView-meta.xml
<ListView>
    <fullName>Whatsapp_Messages</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>Message_Content__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Whatsapp Messages</label>
</ListView>